--- a/shop/index.html
+++ b/shop/index.html
@@ -84,8 +84,8 @@
             <div class="col-lg-3 col-md-4 col-sm-6">
                 <div class="card bg-body-secondary rounded-2 p-3" data-name="brownie with icecream" data-price="150">
                     <img src="assests/img/7.jpg" alt="brownie with icecream" class="card-img-top">
-                    <div class="card-body p-1">
-                        <h5 class="card-title">Brownie with icecream</h5>
+                    <div class="card-body">
+                        <h5 class="card-title">Brownie</h5>
                         <p class="card-text">Price: $150</p>
                         <button class="btn btn-dark" onclick="addToCart('brownie with icecream')">Add to Cart</button>
                     </div>
