--- a/slider/index.html
+++ b/slider/index.html
@@ -9,9 +9,9 @@
 <body>
     <div class="slider">
         <div class="slides">
-            <div class="slide"><img src="https://img-cdn.pixlr.com/image-generator/history/65bb506dcb310754719cf81f/ede935de-1138-4f66-8ed7-44bd16efc709/medium.webp" alt="Image 1"></div>
-            <div class="slide"><img src="https://img.freepik.com/premium-photo/there-is-cat-that-is-sitting-ledge-chinese-garden-generative-ai_900396-35755.jpg" alt="Image 2"></div>
-            <div class="slide"><img src="https://img.freepik.com/premium-photo/there-is-cat-that-is-holding-sword-front-full-moon-generative-ai_958108-50240.jpg" alt="Image 3"></div>
+            <div class="slide"><img src="https://cdn.pixabay.com/photo/2023/10/24/08/24/sailboats-8337698_1280.jpg" alt="Image 1"></div>
+            <div class="slide"><img src="https://cdn.pixabay.com/photo/2021/07/12/19/43/swans-6421355_1280.jpg" alt="Image 2"></div>
+            <div class="slide"><img src="https://media.istockphoto.com/id/496879232/photo/fisherman-on-boat-at-lake.jpg?s=1024x1024&w=is&k=20&c=QTursdr47dC0rvSrwuFGgaZLwlLNyLTFopoFzxydh48=" alt="Image 3"></div>
         </div>
         <button class="prev" onclick="moveSlide(-1)">&#10094;</button>
         <button class="next" onclick="moveSlide(1)">&#10095;</button>
