--- a/pro-5/index.html
+++ b/pro-5/index.html
@@ -11,5 +11,9 @@
             queue
         </h2>
     </div>
+    <script src="queue.js"></script>
+    <script src="queueusingtwostack.js"></script>
+    <script src="circular_queue.js"></script>
+    <script src="stackwithtwoqueue.js"></script>
 </body>
 </html>
